--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -11,9 +11,9 @@ tokio = {version = "1.0", features = ["full"]}
 
 jsonwebtoken = {version = "8", default-features = false}
 rocket = "0.5.0-rc.2"
+rocket_okapi = {version = "0.8.0-rc.2", features = ["swagger"]}
 
 okapi = {version = "0.7.0-rc.1"}
-rocket_okapi = {version = "0.8.0-rc.2", features = ["swagger"]}
 schemars = "0.8.10"
 
 prisma-client-rust = {git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.1"}
@@ -22,3 +22,5 @@ prisma-client-rust-cli = {git = "https://github.com/Brendonovich/prisma-client-r
 ory-kratos-client = "0.10.1"
 
 anyhow = "1"
+lazy_static = "1"
+thiserror = "1"
