--- a/api/supervisord.conf
+++ b/api/supervisord.conf
@@ -1,8 +1,9 @@
 [supervisord]
 nodaemon=true
+user=root
 
 [program:api]
 command=/usr/local/bin/api
 
 [program:kratos]
-command=/usr/local/bin/kratos
+command=/usr/local/bin/kratos serve
